--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,38 +1,72 @@
-name: Build and Lint
+# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-on: [push, pull_request]
+name: 🚧 Build - Build sources
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+on:
+  push:
+    branches: [main]
+  pull_request:
+  workflow_dispatch:
+
+
+env:
+  node_version: 20.x
+  pnpm_version: 8.x
 
 jobs:
-  build:
+  build-web:
+    name: 🚧 Build Web
     runs-on: ubuntu-latest
 
-    strategy:
-      fail-fast: false
-      matrix:
-        # the Node.js versions to build on
-        node-version: [18.x, 20.x]
+    steps:
+      - name: ⛙ Checkout branch ${{ github.ref }}
+        uses: actions/checkout@v4
+
+      - name: 🚧 Build
+        uses: ./.github/actions/build
+        with:
+          node_version: ${{ env.node_version }}
+          pnpm_version: ${{ env.pnpm_version }}
+
+  test:
+    name: 🧪 Unit Test
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: ⛙ Checkout branch ${{ github.ref }}
+        uses: actions/checkout@v4
 
-      - name: Use Node.js ${{ matrix.node-version }} 
-        uses: actions/setup-node@v3
+      - name: 🧱 Install
+        uses: ./.github/actions/install
         with:
-          node-version: ${{ matrix.node-version }}
+          node_version: ${{ env.node_version }}
+          pnpm_version: ${{ env.pnpm_version }}
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Lint the project
-        run: npm run lint
-
-      - name: Build the project
-        run: npm run build
-
-      - name: List, audit, fix outdated dependencies and build again
+      - name: 🧪 Unit tests
         run: |
-          npm list --outdated
-          npm audit || true  # ignore failures
-          npm audit fix || true
-          npm list --outdated
-          npm run build
+          # ================= 🧪 Unit tests =================
+          pnpm run test:unit
+
+  lint:
+    name: 🧹 Lint
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: ⛙ Checkout branch ${{ github.ref }}
+        uses: actions/checkout@v4
+
+      - name: 🧱 Install
+        uses: ./.github/actions/install
+        with:
+          node_version: ${{ env.node_version }}
+          pnpm_version: ${{ env.pnpm_version }}
+
+      - name: 🧹 Eslint
+        run: |
+          # =================  🧹 Eslint  =================
+          pnpm run lint
