--- a/package.json
+++ b/package.json
@@ -1,40 +1,67 @@
 {
-  "private": true,
-  "displayName": "Plugin Name",
   "name": "homebridge-plugin-name",
+  "displayName": "Plugin Name",
   "version": "1.0.0",
+  "private": true,
+  "type": "module",
   "description": "A short description about what your plugin does.",
-  "license": "Apache-2.0",
+  "keywords": [
+    "homebridge-plugin"
+  ],
+  "bugs": {
+    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME/issues"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/USERNAME/GITHUB_PROJECT_NAME.git"
   },
-  "bugs": {
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME/issues"
-  },
-  "engines": {
-    "node": "^18.17.0 || ^20.9.0",
-    "homebridge": "^1.6.0"
-  },
+  "license": "Apache-2.0",
   "main": "dist/index.js",
   "scripts": {
-    "lint": "eslint src/**/*.ts --max-warnings=0",
-    "watch": "npm run build && npm link && nodemon",
-    "build": "rimraf ./dist && tsc",
-    "prepublishOnly": "npm run lint && npm run build"
+    "prepare": "husky",
+    "clear": "rimraf dist",
+    "build": "pnpm run clear && tsc",
+    "watch": "pnpm run build && pnpm link && nodemon",
+    "test:unit": "vitest run --coverage --mode testing",
+    "test:watch": "vitest --mode testing",
+    "lint": "eslint src",
+    "lint:fix": "pnpm run lint --fix",
+    "release": "standard-version",
+    "release:changelog": "extract-changelog-release > RELEASE.md"
   },
-  "keywords": [
-    "homebridge-plugin"
-  ],
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,vue,svelte,json,md}": [
+      "eslint --fix"
+    ]
+  },
+  "dependencies": {
+    "homebridge": "^1.8.0"
+  },
   "devDependencies": {
-    "@types/node": "^20.12.7",
+    "@commitlint/cli": "^19.0.0",
+    "@commitlint/config-conventional": "^19.0.0",
+    "@dvcol/eslint-plugin-presets": "^1.3.10",
+    "@types/node": "ts5.5",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vitest/coverage-v8": "^1.5.0",
+    "c8": "^9.0.0",
     "eslint": "^8.57.0",
-    "homebridge": "^1.8.0",
+    "eslint-plugin-vitest": "^0.4.1",
+    "extract-changelog-release": "^1.0.2",
+    "husky": "^9.0.6",
+    "lint-staged": "^15.0.0",
     "nodemon": "^3.1.0",
+    "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "standard-version": "^9.5.0",
+    "typescript": "^5.4.5",
+    "vitest": "^1.1.0"
+  },
+  "packageManager": "pnpm@9.0.4",
+  "engines": {
+    "homebridge": "^1.6.0",
+    "node": "^18.17.0 || ^20.9.0"
   }
 }
