--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "homebridge-plugin-name",
+  "name": "homebridge-plugin-withings-sleep",
   "displayName": "Plugin Name",
+  "type": "module",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
-  "description": "A short description about what your plugin does.",
+  "packageManager": "pnpm@9.0.4",
+  "description": "A simple plugin to expose withings sleep as an occupancy sensor",
   "keywords": [
     "homebridge-plugin"
   ],
   "bugs": {
     "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME/issues"
   },
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/USERNAME/GITHUB_PROJECT_NAME.git"
   },
-  "license": "Apache-2.0",
   "main": "dist/index.js",
   "scripts": {
     "prepare": "husky",
@@ -28,11 +29,6 @@
     "lint:fix": "pnpm run lint --fix",
     "release": "standard-version",
     "release:changelog": "extract-changelog-release > RELEASE.md"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx,vue,svelte,json,md}": [
-      "eslint --fix"
-    ]
   },
   "dependencies": {
     "homebridge": "^1.8.0"
@@ -48,8 +44,10 @@
     "@vitest/coverage-v8": "^1.5.0",
     "c8": "^9.0.0",
     "eslint": "^8.57.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vitest": "^0.4.1",
     "extract-changelog-release": "^1.0.2",
+    "homebridge-config-ui-x": "^4.56.2",
     "husky": "^9.0.6",
     "lint-staged": "^15.0.0",
     "nodemon": "^3.1.0",
@@ -59,7 +57,11 @@
     "typescript": "^5.4.5",
     "vitest": "^1.1.0"
   },
-  "packageManager": "pnpm@9.0.4",
+  "lint-staged": {
+    "*.{cjs,mjs,js,jsx,ts,tsx,vue,svelte,json,md}": [
+      "eslint --fix"
+    ]
+  },
   "engines": {
     "homebridge": "^1.6.0",
     "node": "^18.17.0 || ^20.9.0"
