--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,4 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: ☁️ Publish - npm Publish and Github Release
+name: ☁️ Publish
 
 on:
   workflow_call:
@@ -14,44 +11,40 @@ on:
         description: Tag name
         required: false
         type: string
-      skip-npm:
-        description: Skip npm publish
+  workflow_dispatch:
+    inputs:
+      commit-hash:
+        description: Commit to checkout
         required: false
-        type: boolean
-
-env:
-  node_version: 20.x
-  pnpm_version: 8.x
+        type: string
+      tag-name:
+        description: Tag name
+        required: false
+        type: string
 
 jobs:
-  publish:
-    name: ☁️ Publish to npm
+  publish-npm:
+    name: ☁️ Publish
     runs-on: ubuntu-latest
 
     steps:
       - name: ⛙ Checkout branch ${{ github.ref }}
         uses: actions/checkout@v4
         with:
-          ref: main
+          ref: ${{ inputs.commit-hash || 'main' }}
           fetch-depth: 0
 
       - name: 🚧 Build
         uses: ./.github/actions/build
-        with:
-          node_version: ${{ env.node_version }}
-          pnpm_version: ${{ env.pnpm_version }}
 
-      - name: 💾 Save build artefacts
-        uses: actions/cache/save@v4
-        id: cache
-        with:
-          path: dist
-          key: ${{ github.ref }}-${{ github.run_id }}-build
-
-      - name: ☁️ Publish to npm
-        if: ${{ inputs.skip-npm != true }}
+      - name: ☁️ Publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          # =================  ☁️ Publish to npm =================
+          # =================  ☁️ Publish =================
+          # Check status
+          git status
+          git diff --color -U0 | cat
+          
+          # Publish
           pnpm publish
