--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: 📦 Release - Tag, Release, Publish and Deploy
 
 concurrency:
@@ -18,10 +15,6 @@ on:
         description: Skip npm publish
         required: false
         type: boolean
-
-env:
-  node_version: 20.x
-  pnpm_version: 8.x
 
 jobs:
   release:
@@ -42,9 +35,6 @@ jobs:
 
       - name: 🧱 Install
         uses: ./.github/actions/install
-        with:
-          node_version: ${{ env.node_version }}
-          pnpm_version: ${{ env.pnpm_version }}
 
       - name:  🏷️ Release
         run: |
@@ -78,10 +68,10 @@ jobs:
           echo "tag_name=${tag_name}" >> "$GITHUB_OUTPUT"
           echo "commit_hash=${commit_hash}" >> "$GITHUB_OUTPUT"
 
-      - name: ☁️ Publish to npm
-        if: ${{ inputs.skip-npm != true }}
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: |
-          # =================  ☁️ Publish to npm =================
-          pnpm publish
+  publish:
+    name: ☁️ Publish
+    needs: release
+    uses: ./.github/workflows/publish.yml
+    secrets: inherit
+    with:
+      tag-name: ${{ inputs.tag-name || needs.release.outputs.tag-name }}
